--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,20 +12,29 @@ Palette
     --glass-border: rgba(255, 255, 255, 0.7);
 }
 
-
-
-body,
-h1 {
+* {
     margin: 0;
     padding: 0;
 
     font-family: 'Open Sans', sans-serif;
+    box-sizing: border-box;
 }
 
+body,
+h1 {
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
+}
+
+
+/*  Header */
 .header-container {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     align-items: center;
+    margin: 1.5rem 1.5rem 0rem 1.5rem;
 }
 
 .daily-logo {
@@ -33,6 +42,89 @@ h1 {
     font-weight: bold;
 }
 
+.header-info {
+    font-size: 12px;
+    color: var(--grey);
+}
+
+
+/*  Content */
+.content-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 1rem;
+
+    margin: 0rem 1.5rem;
+}
+
+.top-component-section {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.input-group {
+    display: flex;
+    justify-content: space-between;
+    gap: 1rem;
+
+    height: 36px;
+}
+
+
+/*  Input form  */
+.todo-input {
+    display: flex;
+    flex: 1;
+    min-width: 280px;
+    max-width: 600px;
+
+    border-radius: 4px;
+    border: 1px solid var(--light-grey);
+    background-color: var(--white);
+
+    padding: 0.75rem 0.625rem;
+}
+
+.add-btn {
+    background-color: var(--black);
+    color: var(--white);
+    width: 56px;
+
+    border-radius: 4px;
+}
+
+
+/*  Filter buttons  */
+.filter-buttons {
+    display: flex;
+    gap: 1rem;
+}
+
+.filter-btn {
+    min-width: 72px;
+    max-width: 96px;
+    height: 36px;
+
+    border: none;
+    border-radius: 4px;
+    padding: 0.5rem 0.75rem;
+
+    background-color: transparent;
+}
+
+.active-filter {
+    background-color: var(--black);
+    color: var(--white);
+    transition: all 0.35s ease-out;
+}
+
+/*  Grey line divider   */
+hr.solid {
+    border-top: 2px solid #bbb;
+    width: 100%;
+}
 
 .todo-item {
     height: 32px;
