--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,7 +28,7 @@ body,
 h1 {
     display: flex;
     flex-direction: column;
-    gap: 4rem;
+    gap: clamp(2rem, 4vw + 1rem, 4rem);
 }
 
 body {
@@ -46,6 +46,13 @@ body {
 
     gap: 2rem;
     margin: 0rem 1.5rem;
+
+    opacity: 1;
+    transition: all 0.5s ease;
+}
+
+.header-container.inactive {
+    opacity: 0;
 }
 
 .daily-logo {
